<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_view_data_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_layout_background"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="20dp"
    android:paddingRight="10dp"
    android:paddingBottom="35dp"
    tools:context=".ViewDataActivity">

    <LinearLayout
        android:id="@+id/lay_labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@drawable/rounded_corner_layout_dark">

        <TextView
            android:id="@+id/tv_data_id"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/tv_data_id_label"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/tv_data_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="7"
            android:padding="10dp"
            android:text="@string/tv_data_content"
            android:textAlignment="textStart" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_corner_layout_dark"
        android:padding="10dp">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/bt_delete_all_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/bt_delete_all_data"
        android:textColor="@color/colorWhite" />

</LinearLayout>